Harden cuVS-Lucene compatibility coverage